# mapcli-py

./: main.py  pyproject.toml
src/mapcli/: __init__.py  create_cli_pkg.py  mapcli.py
src/mapcli/templates/pyproject/: pyproject.toml.jinja
src/mapcli/templates/pyproject/src/{{new_cli_name | replace("-","_") }}/: main.py
